2.9.2 (19-03-2020)
- Refactor: Upgraded dependency of fenixedu-academic-core (PrecedentDegreeInformation split into 'completed' and 'previous')

2.9.1 (16-03-2020)
- Bug fix: Correcting Java 11 release

2.9.0 (09-03-2020)
- New feature: Support for Java 11

2.8.8 (06-03-2020)
- Fix: A3es: both FCDs and FUCs don't send any data if no value is selected + fixed a typo

2.8.7 (04-03-2020)
- Refactor: Upgraded dependency of fenixedu-academic-core
- Fix: A3es: disabled bibliography non printable chars cleanup

2.8.6 (04-03-2020)
- Fix: Changed A3ES help message to indicate that user should explicitly choose which data to send
- Fix: Fixed bug on A3ESInstance initialization 

2.8.5 (06-02-2020)
- Refactor: upgraded fenixedu-academic-core dependency (removed deprecated StudentCandidacy slots)

2.8.4 (30-01-2020)
- Fix: Added missing label (IntegratedMasterFirstCycleGraduatedReportOption.ALL)
- Fix: RAIDES: Validate frequence regime
- Refactor: upgraded fenixedu-academic-core dependency

2.8.3 (21-01-2020)
- Fix: Branch code in degree courses was being reported incorrectly to RAIDES (#UL-ISA-1176)

2.8.2 (16-01-2020)
- Fix: RAIDES - excluded registrations by protocol (graduated list)

2.8.1 (08-01-2020)
- Improvement: added missing resources (EN)
- Fix: removed the branch mapping of the generic RAIDES mappings

2.8.0 (06-01-2020)
- Improvement: support to RAIDES19

2.7.7 (17-12-2019)
- Refactor: upgraded fenixedu-academic-core dependency

2.7.6 (03-12-2019)
- Fix: A3es teachers upload bean materialization fix when submitted json object too large

2.7.5 (26-11-2019)
- Fix: teachers competence courses are now correctly displayed

2.7.4 (12-11-2019)
- Improvement: changed multiplicity of A3esProcess-DegreeCurricularPlan relation to 1-many

2.7.3 (25-10-2019)
- Fix: changed getName method implementation on A3ESProcess to return identifier
- Fix: added enum type to map specialist title (due to A3ES platform integration API change)

2.7.2 (18-10-2019)