@@ -146,13 +146,13 @@
 		<dependency>
 			<groupId>com.qubit.solution.fenixedu</groupId>
 			<artifactId>fenixedu-academic-core</artifactId>
-			<version>28.7.0</version>
+			<version>29.0.0</version>
 		</dependency>
 		
 		<dependency>
 			<groupId>org.fenixedu</groupId>
 			<artifactId>fenixedu-academic-extensions</artifactId>
-			<version>4.4.1</version>
+			<version>4.6.0</version>
 		</dependency>		
         
         <!-- https://mvnrepository.com/artifact/net.lingala.zip4j/zip4j -->
