@@ -1,3 +1,5 @@
+- Refactor: Upgraded dependency of fenixedu-academic-core (removal of organizational Units subclasses)
+
 2.9.2 (19-03-2020)
 - Refactor: Upgraded dependency of fenixedu-academic-core (PrecedentDegreeInformation split into 'completed' and 'previous')
 
